examples/complete/openmetadata-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openmetadata-ingress
  namespace: openmetadata
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing  # Use 'internal' if you want an internal ALB
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: openmetadata-deps-web
                port:
                  number: 8080
          - path: /openmetadata/*
            pathType: Prefix
            backend:
              service:
                name: openmetadata
                port:
                  number: 8585
